# shop

./: .containerignore  .dockerignore  .env  .env.template  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  compose.template.yaml  compose.yaml  compose.yaml.template  readme.md  rust_package.containerfile  setup.sh  template.env  template.plist  todo.md  troubleshooting.md
inventory/: Cargo.toml
inventory/container/: Containerfile  entrypoint.sh
inventory/curl/: base.curl  create_item.curl  create_item.json  create_label.curl  get_item.curl  get_label.curl  get_product_items.curl  local.curl  readme.md
inventory/curl/category/: create_category.curl  create_category.json
inventory/curl/customer/: create_customer.curl  create_customer.json  get_all_customer_purchases.curl  get_customer.curl
inventory/curl/item/: create_item.curl  create_item_image.curl  create_item_label_association.curl  delete_item_label_association.curl  get_all_item_conditions.curl  get_all_item_images.curl  get_all_item_item_audits.curl  get_all_item_labels.curl  get_all_item_listings.curl  get_item.curl
inventory/src/: category.rs  db.rs  decrypt.rs  env.rs  environment.rs  error.rs  http.rs  inventory_location.rs  item.rs  lib.rs  macro_enumeration.rs  macro_http.rs  main.rs  object.rs  pagination.rs  product.rs  public.rs  public_api.rs  registry.rs  server.rs  unwrap_http.rs
inventory/src/category/: mod.rs  (+4 more)
schema/: Cargo.toml  prepare_sqlx_cache.sh
schema/migrations/: V1__Temp_Initial_Schema.sql  V1__market_and_inventory.sql  V2__Temp_Add_Indexes_And_Additional_Tables.sql  V2__create_authelia.sql  V3__Temp_Marketplace_Integration.sql  V3__inventory_location_address.sql  V4__ebay_schema.sql  V5__listing_updates.sql  V5__remove_listing_uri.sql  V6__marketplace_values.sql  V7__item_image_update.sql  manual.sql
schema/src/: main.rs
storefront/: Cargo.toml  build.rs  setup.sh
storefront/src/: admin.rs  api.rs  lib.rs  main.rs  public.rs  registry.rs  server.rs  template.rs
storefront/static/: base.css  component.js  http.js  index.js  reset.css  sliver.js  submit_form.js  tree.css
(+301 files in other folders)
