[package]
name = "inventory"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { version = "0.4" }
env_logger = { version = "0.11.8" }
actix-web = { version = "4" }
sqlx = { version = "0.8", features = ["postgres", "macros", "uuid", "runtime-tokio", "tls-native-tls"] }
dotenvy = { version = "0.15" }

[profile.dev.package.sqlx-macros]
opt-level = 3
