[package]
name = "schema"
version = "0.1.0"
edition = "2024"

[dependencies]
crypt = { version = "*", path = "../crypt" }

dotenvy = { version = "0.15" }
base64 = { version = "0.22" }
log = { version = "0.4.27" }
env_logger = { version = "0.11.8" }
refinery = { version = "0.8.16", features = ["postgres", "enums"] }
postgres = { version = "0.19.10" }
